# cryptography-research-template

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_bls.py
docs/: index.md  math.md  security.md
notebooks/: bls_usage.ipynb
src/: __init__.py  bls.py  config.py  main.py
tests/: __init__.py  test_bls.py  test_config.py  test_dummy.py  test_invariants.py
